# Employee-Onboarding-Agent

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  data.db  main.py  pyproject.toml  requirements.txt
backend/agent/: hitl.py  knowledge_tools.py  orchestrator.py  prompts.py  specialists.py  supervisor.py
backend/api/: admin.py  chat.py
backend/database/: engine.py  models.py  seed.py
backend/evals/: README.md  __init__.py  dataset.py  evaluators.py  run_evals.py
backend/knowledge/: vector_store.py
backend/knowledge_docs/: benefits_guide.md  code_of_conduct.md  engineering_guide.md  hr_policy.md  it_security_policy.md  marketing_guide.md  sales_guide.md
backend/mcp_servers/: data_store.py  hr_server.py  it_server.py  knowledge_server.py  salesforce_server.py  slack_server.py  training_server.py
backend/utils/: logger.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInterface.tsx  EmployeeSelector.tsx  FieldInput.tsx  MessageBubble.tsx
frontend/app/hooks/: useChat.ts
frontend/app/types/: index.ts
solution_design/: solution_design.tex
